force-app/main/default/objects/Option_List_Item__c/Option_List_Item__c.object-meta.xml
<CustomObject>
    <description>Custom object use to store selectable values that are too large for a picklist and will allow users to search based n the named field values using a standard lookup field</description>
    <label>Option List Item</label>
    <nameField>
        <label>Option List Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Option List Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>