force-app/main/default/objects/Option_List_Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to specify if this value is currently active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>