force-app/main/default/objects/Option_List_Item__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>SGPRT- 3817 Field used to capture Company Code.</description>
    <inlineHelpText>Values found in FMI file mapped to the Legal Entity of Booking values.</inlineHelpText>
    <label>Company Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>