force-app/main/default/objects/Option_List_Item__c/fields/Legal_Entity_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_of_Booking__c</fullName>
    <description>SGPRT- 3817 field used in Profit Centre filtering on Product.</description>
    <label>Legal Entity of Booking</label>
    <length>225</length>
    <type>Text</type>
</CustomField>