force-app/main/default/objects/Option_List_Item__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <description>Used to store a long description of the value</description>
    <label>Long Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>