force-app/main/default/objects/Option_List_Item__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>List of objects in Salesforce</description>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>