force-app/main/default/objects/Option_List_Item__c/fields/User_Team__c.field-meta.xml
<CustomField>
    <fullName>User_Team__c</fullName>
    <description>SGPRT-369 Select Product on Cross Border Case record. This will allow users from specific teams to view only records relevant to them via lookup filter criteria</description>
    <inlineHelpText>This value relates to the team a user belongs to based on their user record.</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>