force-app/main/default/objects/Option_List_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>User_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>